--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js TypeScript Tutorials by Sean Bradley : https://sbcode.net/threejs</title>
-  </head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Three.js TypeScript Tutorials by Sean Bradley : https://sbcode.net/threejs</title>
+    </head>
 
-  <body>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <body>
+        <div id="debug"></div>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
