--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Three.js TypeScript Tutorials by Sean Bradley : https://sbcode.net/threejs</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Three.js TypeScript Tutorials by Sean Bradley : https://sbcode.net/threejs</title>
+  </head>
 
-    <body>
-        <script type="module" src="/src/main.ts"></script>
-    </body>
+  <body>
+    <div class="label">MeshBasicMaterial</div>
+    <div class="label">MeshNormalMaterial</div>
+    <div class="label">MeshPhongMaterial</div>
+    <div class="label">MeshStandardMaterial</div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
